// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes the class on hover 1`] = `
<a
  className="normal"
  href="http://www.facebook.com"
  id="LinkComponent"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Facebook
</a>
`;

exports[`changes the class on hover 2`] = `
<a
  className="hovered"
  href="http://www.facebook.com"
  id="LinkComponent"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Facebook
</a>
`;

exports[`changes the class on hover 3`] = `
<a
  className="normal"
  href="http://www.facebook.com"
  id="LinkComponent"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Facebook
</a>
`;

exports[`renders correctly 1`] = `
<a
  className="normal"
  href="http://www.instagram.com"
  id="LinkComponent"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Instagram
</a>
`;
